<resources>
    <string name="app_name">DoctorCom</string>
    <string name="license_title">END USER LICENSE AGREEMENT</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data.</string>
    <string name="back">Back</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="follow_up">Follow up</string>
    <string name="view_attachments">View Attachments</string>
    <string name="no_subject">&lt;No Subject&gt;</string>
    <string name="no_content">&lt;No Content&gt;</string>
    <string name="load_attchment">Loading attchment, please wait</string>
    <string name="connecting">Connecting</string>
    <string name="progress">Progress:</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="site">Site</string>
    <string name="save">Save</string>
    <string name="resend">Resend</string>
    <string name="new_invitation">New Invitation</string>
    <string name="email_address">Email Address:</string>
    <string name="input_note">Input Note Here(optional).</string>
    <string name="update_phone">Updata Phone</string>
    <string name="update">Update</string>
    <string name="phone_update_info">Warning:before you finish this process,your old number will still work.</string>
    <string name="mobile_phone">Mobile Phone:</string>
    <string name="validate_phone">Validate Phone</string>
    <string name="code_send_info">We have sent you one message to your cell phone (number). Please input the 4 digitals pin code in that message.</string>
    <string name="submit">Submit</string>
    <string name="code_resend_info">If you did not receive that message in %d mimute(s), please click resend button.</string>
    <string name="preference">Preference</string>
    <string name="time_format_setting">Time Format Setting</string>
    <string name="time_zone_setting">Time Zone Setting</string>
    <string name="h12">12-hour clocks</string>
    <string name="h24">24-hour clocks</string>
</resources>