<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_center" >

        <Button
            android:id="@+id/btReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_replay"
            android:text="@string/reply"
            android:textColor="@color/message"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_forward"
            android:text="@string/forward"
            android:textColor="@color/message"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btFollowUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button_fllowup"
            android:text="@string/follow_up"
            android:textColor="@color/message"
            android:textSize="13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btAttachments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/button_viewattch"
            android:text="@string/view_attachments"
            android:textColor="@color/message"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/no_subject"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/message_body_selector"
            android:lineSpacingExtra="3dp"
            android:text="@string/no_content"
            android:textColor="@color/black" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_bottom" >
    </FrameLayout>

</LinearLayout>