<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/common_bg"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/load_attchment"
        android:textColor="@color/message_from"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="110" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <TextView
            android:id="@+id/tvinfo"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/connecting"
            android:textColor="@color/message_from" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:text="@string/progress"
            android:textColor="@color/message_from" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/message_from" />

    </LinearLayout>

    <Button
        android:id="@+id/btCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_red_selector"
        android:text="@string/cancel"
        android:textColor="@color/white" />

</LinearLayout>